# m

./: .gitignore  Cargo.toml  Dockerfile.webhook  Dockerfile.whatsapp_client  README.md  docker-compose.yaml  docker-compose.yml
config/: create-topics.sh  kafka-topics.yaml
crates/common/: Cargo.toml
crates/common/src/: errors.rs  events.rs  kafka_bus.rs  lib.rs  message_bus.rs  message_types.rs  webhook_types.rs
crates/kafka-service/: Cargo.toml
crates/kafka-service/src/: config.rs  consumer.rs  lib.rs  main.rs  processor.rs  producer.rs
crates/webhook/: Cargo.toml
crates/webhook/src/: config.rs  event_publisher.rs  lib.rs  main.rs  routes.rs  state.rs  types.rs
crates/webhook/src/handlers/: mod.rs  webhook.rs
crates/webhook/src/types/: message.rs  mod.rs  payload.rs  webhook.rs
crates/whatsapp_client/: Cargo.toml
crates/whatsapp_client/src/: config.rs  errors.rs  lib.rs  main.rs
crates/whatsapp_client/src/client/: core.rs  mod.rs  responses.rs  validation.rs
crates/whatsapp_client/src/client/builders/: audio.rs  document.rs  image.rs  interactive.rs  location.rs  mod.rs  text.rs  video.rs
crates/whatsapp_client/src/client/message_types/: audio.rs  contacts.rs  document.rs  image.rs  interactive.rs  location.rs  mod.rs  mtrait.rs  text.rs  video.rs
dev/: main.py  pyproject.toml  test.json
scripts/: monitoring.py  python_test.py
whatsapp_api_knowledge_base/: message.md  message_audio.md  message_contacts.md  message_document.md  message_image.md  message_interactive_call_to_action_url_button_messages.md  message_interactive_list.md  message_interactive_location_request_messages.md  message_interactive_reply_buttons_messages.md  message_location.md  message_text.md  message_video.md  webhook_notification_payloads_example.md
