[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
rdkafka = { version = "0.37.0", features = ["cmake-build", "tokio", "dynamic-linking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4"] }
