[package]
name = "webhook"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
config = "0.15.11"
dotenv = "0.15.0"
http = "1.3.1"
mockall = "0.13.1"
rdkafka = { version = "0.37.0", features = ["cmake-build", "tokio"] }
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
