[package]
name = "whatsapp_client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "whatsapp_client"
path = "src/main.rs"


[dependencies]
# Core async runtime and utilities
tokio = { version = "1.46.1", features = ["full"] }
futures = "0.3.31"

# HTTP client
reqwest = { version = "0.12.22", features = ["json"] }

# JSON serialization/deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Error handling and logging
anyhow = "1.0.98"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Configuration management
dotenv = "0.15.0"

# Time and date handling
chrono = { version = "0.4.41", features = ["serde"] }

# UUID generation
uuid = { version = "1.17.0", features = ["v4"] }

# Rate limiting (for API calls)
governor = "0.10.0"
nonzero_ext = "0.3.0"

# Common events types and Kafka integration
common = { path = "../common" }
regex = "1.11.1"
